src/objects/StudentCourseView__c.object
<CustomObject>
    <description>Object to store relations between students and courses.</description>
    <fields>
        <fullName>BannerActivityDate__c</fullName>
        <label>Banner Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BannerCourseCode__c</fullName>
        <label>Banner Course Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRUniqueID__c</fullName>
        <description>Stores the same value as Course Registration Unique ID. Used as an external ID for upserts.</description>
        <externalId>true</externalId>
        <label>CR Unique ID</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CourseCompletion__c</fullName>
        <description>Identifies that this course was completed.</description>
        <label>Course Completion</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseRegistrationEndDate__c</fullName>
        <label>Course Registration End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CourseRegistrationStartDate__c</fullName>
        <label>Course Registration Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CourseRegistrationTermCode__c</fullName>
        <label>Course Registration Term Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoursesIManage__c</fullName>
        <description>If the BannerCourseCode__c is contained in $User.CoursesIManage return true else false.</description>
        <formula>IF(CONTAINS($User.CoursesIManage__c, BannerCourseCode__c), &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Courses I Manage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CumulativeSAP__c</fullName>
        <formula>StudentContact__r.CumulativeSAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative SAP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentMentor__c</fullName>
        <formula>IF($User.PIDM__c  =   StudentMentor__r.PIDM__c ,&apos;True&apos;,&apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentMentor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAADate__c</fullName>
        <formula>StudentContact__r.FAADate__c</formula>
        <label>FAA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancialAidStatus__c</fullName>
        <formula>StudentContact__r.FinancialAidStatus__c</formula>
        <label>Financial Aid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastDateofAAV__c</fullName>
        <formula>StudentContact__r.LastDateOfAAV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Date of AAV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MentorPIDM__c</fullName>
        <label>Mentor PIDM</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramSummary__c</fullName>
        <formula>StudentContact__r.ProgramCode__c + &quot; (&quot; + StudentContact__r.ProgramCatalogTerm__c + &quot;)&quot;</formula>
        <label>Program Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Student Course Views</relationshipLabel>
        <relationshipName>StudentCourseViews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentBannerID__c</fullName>
        <label>Student Banner ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentContact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Course Views</relationshipLabel>
        <relationshipName>StudentCourseViews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentMentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StudentCourseViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentPIDM__c</fullName>
        <label>Student PIDM</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentStatus__c</fullName>
        <label>Student Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentTermCode__c</fullName>
        <label>Student Term Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentTermNumber__c</fullName>
        <formula>StudentContact__r.TermNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Term Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermCompletedCUs__c</fullName>
        <formula>StudentContact__r.TermCompletedCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Completed CUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermEndDate__c</fullName>
        <formula>StudentContact__r.TermEndDate__c</formula>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermEnrolledCUs__c</fullName>
        <formula>StudentContact__r.TermEnrolledCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Enrolled CUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermSAP__c</fullName>
        <formula>StudentContact__r.TermSap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term SAP (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TermStartDate__c</fullName>
        <formula>StudentContact__r.TermStartDate__c</formula>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalAttemptedCUs__c</fullName>
        <formula>StudentContact__r.TotalAttemptedCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attempted CUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalCompletedCUs__c</fullName>
        <formula>StudentContact__r.TotalCompletedCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Completed CUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WGUCourseTitle__c</fullName>
        <label>WGU Course Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WGU Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipLabel>Student Course Views</relationshipLabel>
        <relationshipName>StudentCourseViews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUDegreeProgram__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WGU Degree Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>Student Course Views</relationshipLabel>
        <relationshipName>StudentCourseViews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Student Course View</label>
    <listViews>
        <fullName>AllStudents</fullName>
        <columns>StudentContact__c</columns>
        <columns>BannerCourseCode__c</columns>
        <columns>StudentTermCode__c</columns>
        <columns>StudentStatus__c</columns>
        <columns>CumulativeSAP__c</columns>
        <columns>FAADate__c</columns>
        <columns>ProgramSummary__c</columns>
        <columns>StudentBannerID__c</columns>
        <columns>StudentTermNumber__c</columns>
        <columns>TermStartDate__c</columns>
        <columns>TermEndDate__c</columns>
        <columns>TermCompletedCUs__c</columns>
        <columns>TermEnrolledCUs__c</columns>
        <columns>TotalCompletedCUs__c</columns>
        <columns>TotalAttemptedCUs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StudentStatus__c</field>
            <operation>equals</operation>
            <value>AS</value>
        </filters>
        <label>All Students</label>
        <sharedTo>
            <group>MentorManagers</group>
            <group>Mentors</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Students_In_a_Course</fullName>
        <columns>StudentContact__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>StudentMentor__c</columns>
        <columns>StudentTermCode__c</columns>
        <columns>StudentTermNumber__c</columns>
        <columns>TermCompletedCUs__c</columns>
        <columns>TermSAP__c</columns>
        <columns>TermEnrolledCUs__c</columns>
        <columns>TermEndDate__c</columns>
        <columns>CumulativeSAP__c</columns>
        <columns>TermStartDate__c</columns>
        <columns>TotalAttemptedCUs__c</columns>
        <columns>TotalCompletedCUs__c</columns>
        <columns>FAADate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CoursesIManage__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>StudentStatus__c</field>
            <operation>equals</operation>
            <value>AS</value>
        </filters>
        <filters>
            <field>CurrentMentor__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>My Students In a Course (SM)</label>
        <sharedTo>
            <group>MentorFoldersOperations</group>
            <group>MentorManagers</group>
            <group>Mentors</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Students_Enrooled_in_Course</fullName>
        <columns>StudentContact__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>StudentMentor__c</columns>
        <columns>StudentTermCode__c</columns>
        <columns>StudentTermNumber__c</columns>
        <columns>TermCompletedCUs__c</columns>
        <columns>TermSAP__c</columns>
        <columns>TermEnrolledCUs__c</columns>
        <columns>TermEndDate__c</columns>
        <columns>CumulativeSAP__c</columns>
        <columns>TermStartDate__c</columns>
        <columns>TotalAttemptedCUs__c</columns>
        <columns>TotalCompletedCUs__c</columns>
        <columns>FAADate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CoursesIManage__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>StudentStatus__c</field>
            <operation>equals</operation>
            <value>AS</value>
        </filters>
        <label>Students Enrolled in Course (CM)</label>
        <sharedTo>
            <group>MentorManagers</group>
            <group>Mentors</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Course Registration Unique ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Course Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>